--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 40px;
+  margin: 0;
   background-color: #f5f5f5;
   color: #222;
 }
 
-h1 {
-  color: #b31b1b;
+header {
+  background-color: #7a1f2b;
+  color: white;
+  padding: 2rem;
+  text-align: center;
 }
 
-p {
-  font-size: 1.1rem;
+.tagline {
+  font-style: italic;
 }
